fix alignment slider in ffox

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -64,7 +64,7 @@ a:visited {
 }
 
 .update input {
-  margin-top: 1.35em;
+  margin-top: 0.9em;
   margin-right: 3em;
 
   background-color: #f3e3c1;
