--- a/resources/public/css/stereo.css
+++ b/resources/public/css/stereo.css
@@ -66,8 +66,9 @@ a:visited {
 
 #fd-slider-anaglyph-slider {
   width: 250px;
-  float: right;
-  margin-right: 3em;
+  display: inline-block;
+  position: relative;
+  top: 0.75em;
 }
 
 #footer {
